--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,7 +64,17 @@ h5{
     color: rgb(128, 0, 0); /* Precio en verde para destacar */
     font-weight: bold;
 }
+.cart-count{
+    color: white;
+    background-color: red;
+    border-radius: 50%;
+    padding: 0.2em 0.5em;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 5px;
 
+}
 @media (min-width: 992px) { /* Pantallas grandes*/
     #carouselExampleCaptions .carousel-item img {
         max-height: 768px; 
