--- a/carniceriaelcarvajal/frontend/templates/frontend/index.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/index.html
@@ -1,58 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadatos y enlaces a recursos externos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnicería El Carvajal</title>
-    <!-- Enlace a jQuery -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'frontend/css/styles.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Enlace a Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Enlace a estilos personalizados -->
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <!-- Enlace a Font Awesome para iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Espacio para cargar la barra de navegación -->
     <header id="navbar-placeholder"></header>
 
-    <!-- Contenedor principal -->
     <div class="container-inicio">
-        <!-- Carousel de imágenes -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-            <!-- Indicadores del carousel -->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <!-- Contenido del carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/img/slider1.jpg" class="d-block w-100 empavonada" alt="slider1">
+                    <img src="{% static 'frontend/img/slider1.jpg' %}" class="d-block w-100 empavonada" alt="slider1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Carniceria "El Carvajal"</h5>
                         <p class="about-text">Sobre Nosotros: En nuestra carnicería, nos dedicamos a brindarte una experiencia culinaria inigualable. Con décadas de experiencia en la industria cárnica, hemos perfeccionado el arte de seleccionar y preparar los mejores cortes para ti. Nuestro compromiso con la calidad y la frescura es insuperable.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/slider2.jpg"class="d-block w-100 empavonada" alt="slider2">
+                    <img src="{% static 'frontend/img/slider2.jpg' %}" class="d-block w-100 empavonada" alt="slider2">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Carnicería "El Carvajal"</h5>
                         <p class="about-text">Nuestros Productos: Ofrecemos una amplia variedad de productos cárnicos, desde jugosos filetes hasta salchichas caseras. Trabajamos con proveedores locales de confianza para garantizar la calidad de cada pieza y ofrecemos opciones para satisfacer todas las preferencias dietéticas.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/slider3.jpg" class="d-block w-100 empavonada" alt="slider3">
+                    <img src="{% static 'frontend/img/slider3.jpg' %}" class="d-block w-100 empavonada" alt="slider3">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Carnicería "El Carvajal"</h5>
                         <p class="about-text">Nuestra misión es ofrecerte los mejores productos cárnicos y un servicio excepcional. Valoramos tu confianza y nos comprometemos a superar tus expectativas en cada visita. Estamos aquí para ayudarte con asesoramiento sobre cortes específicos, recetas y consejos de cocción en todo momento.</p>
                     </div>
                 </div>
             </div>
-            <!-- Controles del carousel -->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -64,14 +54,13 @@
         </div>
     </div>
 
-    <!-- Sección de Productos Destacados -->
     <section class="featured-products my-5">
         <div class="container">
             <h2 class="text-center">Productos Destacados</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="assets/img/products/carne.jpg" class="card-img-top img-fluid" alt="Carne">
+                        <img src="{% static 'frontend/img/products/carne.jpg' %}" class="card-img-top img-fluid" alt="Carne">
                         <div class="card-body">
                             <h5 class="card-title">Vacuno</h5>
                             <p class="card-text">La mejor carne fresca de la ciudad.</p>
@@ -81,7 +70,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="assets/img/products/pollo.jpg" class="card-img-top img-fluid" alt="Pollo">
+                        <img src="{% static 'frontend/img/products/pollo.jpg' %}" class="card-img-top img-fluid" alt="Pollo">
                         <div class="card-body">
                             <h5 class="card-title">Pollo</h5>
                             <p class="card-text">Pollo fresco y de alta calidad.</p>
@@ -91,7 +80,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="assets/img/products/cerdo.jpg" class="card-img-top img-fluid" alt="Cerdo">
+                        <img src="{% static 'frontend/img/products/cerdo.jpg' %}" class="card-img-top img-fluid" alt="Cerdo">
                         <div class="card-body">
                             <h5 class="card-title">Cerdo</h5>
                             <p class="card-text">Cerdo fresco y delicioso para tus comidas.</p>
@@ -103,22 +92,15 @@
         </div>
     </section>
 
-    <!-- Pie de página -->
     <footer class="footer bg-dark text-white mt-auto">
         <div class="container text-center py-3">
             <h3>Carniceria El Carvajal</h3>
         </div>
     </footer>
 
-    <!-- Enlace a Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- Script para cargar la barra de navegación -->
     <script>
         $(function() {
-            $("#navbar-placeholder").load("navbar.html");
+            $("#navbar-placeholder").load("{% static 'frontend/js/navbar.js' %}");
         });
     </script>
-    <!-- Enlace al archivo JavaScript para funcionalidades de la barra de navegación -->
-    <script src="assets/js/navbar.js"></script>
-</body>
-</html>
