--- a/carniceriaelcarvajal/frontend/static/templates/frontend/navbar.html
+++ b/carniceriaelcarvajal/frontend/static/templates/frontend/navbar.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!-- Barra de navegación -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <!-- Logo -->
-        <a class="navbar-brand" href="index.html">
-            <img src="assets/img/logo.png" alt="Logo" class="navbar-logo d-inline-block align-text-top">
+        <a class="navbar-brand" href="{% url 'index' %}">
+            <img src="{% static 'frontend/img/logo.png' %}" alt="Logo" class="navbar-logo d-inline-block align-text-top">
         </a>
         <!-- Botón de menú desplegable -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,22 +15,22 @@
             <!-- Elementos de la izquierda -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="productos.html">Productos</a>
+                    <a class="nav-link" href="{% url 'productos' %}">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sugerencias.html">Sugerencias</a>
+                    <a class="nav-link" href="{% url 'sugerencias' %}">Sugerencias</a>
                 </li>
             </ul>
             <!-- Elementos de la derecha -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html"><i class="fas fa-user"></i> Iniciar sesión</a>
+                    <a class="nav-link" href="{% url 'login' %}"><i class="fas fa-user"></i> Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link position-relative" href="carrito.html">
+                    <a class="nav-link position-relative" href="{% url 'carrito' %}">
                         <i class="fas fa-shopping-cart"></i> Carrito
                         <span id="cart-count" class="position-absolute top-0 start-95 translate-middle badge rounded-pill bg-danger">0</span>
                     </a>
