--- a/carniceriaelcarvajal/frontend/templates/frontend/contacto.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/contacto.html
@@ -4,37 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnicería "El Carvajal" - Contacto</title>
+    {% load static %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="{% static 'frontend/css/styles.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header id="navbar-placeholder">
+    <header>
+        {% include 'frontend/navbar.html' %}
     </header>
 
     <div class="col-md-6">
         <h3>Información de Contacto</h3>
-        <img src="assets/img/maps.png" alt="Ubicación" class="img-fluid mb-3">
+        <img src="{% static 'frontend/img/maps.png' %}" alt="Ubicación" class="img-fluid mb-3">
         <p><strong>Dirección:</strong> Avenida Siempre Viva 123, Springfield</p>
         <p><strong>Teléfono:</strong> +34 123 456 789</p>
         <p><strong>Correo electrónico:</strong> contacto@carniceriaelcarvajal.com</p>
     </div>
 
-    <!-- Carga del script para el menú de navegación -->
-    <script>
-        $(function() {
-            $("#navbar-placeholder").load("navbar.html");
-        });
-    </script>
-    <!-- Fin del script de carga del menú de navegación -->
-
-    <!-- Carga del script para la barra de navegación -->
-    <script src="assets/js/navbar.js"></script>
-    <!-- Fin del script de la barra de navegación -->
-
-    <!-- Carga del script de Bootstrap -->
+    <script src="{% static 'frontend/js/navbar.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- Fin del script de Bootstrap -->
 </body>
 </html>
