--- a/carniceriaelcarvajal/frontend/templates/frontend/login.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/login.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnicería El Carvajal - Registro</title>
+    <!-- Cargar archivos estáticos de Django -->
+    {% load static %}
     <!-- Enlace a jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Enlace a Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Enlace a estilos personalizados -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="{% static 'frontend/css/styles.css' %}">
     <!-- Enlace a Font Awesome para iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Espacio para cargar la barra de navegación -->
-    <header id="navbar-placeholder"></header>
+    <header>
+        {% include 'frontend/navbar.html' %}
+    </header>
 
     <!-- Contenedor principal para el formulario de inicio de sesión -->
     <div class="login-container">
@@ -36,21 +40,19 @@
                 <button type="submit" class="btn btn-primary">Iniciar sesión</button>
             </form>
             <!-- Enlace para registrarse si no se tiene cuenta -->
-            No tienes una cuenta? <a href="signup.html">Regístrate</a>
+            No tienes una cuenta? <a href="{% url 'signup' %}">Regístrate</a>
         </div>
     </div>
 
     <!-- JavaScript para cargar la barra de navegación -->
     <script>
         $(function() {
-            // Carga el contenido de navbar.html en el elemento con id navbar-placeholder
-            $("#navbar-placeholder").load("navbar.html");
+            // Esta línea no es necesaria porque incluimos el navbar directamente con Django
+            // $("#navbar-placeholder").load("{% url 'navbar' %}");
         });
     </script>
-    <!-- Enlace al archivo JavaScript para funcionalidades de la barra de navegación -->
-    <script src="assets/js/navbar.js"></script>
-    <!-- Enlace al archivo JavaScript para manejar el formulario de inicio de sesión -->
-    <script src="assets/js/login.js"></script>
+    <script src="{% static 'frontend/js/navbar.js' %}"></script>
+    <script src="{% static 'frontend/js/login.js' %}"></script>
     <!-- Enlace a Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
