--- a/carniceriaelcarvajal/frontend/templates/frontend/pago.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/pago.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proceder al Pago - Carnicería "El Carvajal"</title>
+    <!-- Cargar archivos estáticos de Django -->
+    {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="{% static 'frontend/css/styles.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -18,7 +20,9 @@
 </head>
 <body>
     <!-- Encabezado de la página -->
-    <header id="navbar-placeholder"></header>
+    <header>
+        {% include 'frontend/navbar.html' %}
+    </header>
 
     <!-- Contenido principal -->
     <main class="container mt-5">
@@ -55,8 +59,8 @@
     </main>
 
     <!-- Scripts al final de la página -->
-    <script src="assets/js/navbar.js"></script>
-    <script src="assets/js/pago.js"></script>
+    <script src="{% static 'frontend/js/navbar.js' %}"></script>
+    <script src="{% static 'frontend/js/pago.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
