--- a/carniceriaelcarvajal/frontend/templates/frontend/signup.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/signup.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnicería El Carvajal - Registro</title>
+    {% load static %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="{% static 'frontend/css/styles.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header id="navbar-placeholder"></header>
+    <header>
+        {% include 'frontend/navbar.html' %}
+    </header>
 
     <div class="container mt-5">
         <h2 class="text-center">Formulario de Registro</h2>
@@ -33,16 +36,16 @@
             </div>
             <button type="submit" class="btn btn-primary">Registrarse</button>
         </form>
-        Ya tienes una cuenta? <a href="login.html">Inicia sesión</a>
+        Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión</a>
     </div>
 
     <script>
         $(function() {
-            $("#navbar-placeholder").load("navbar.html");
+            $("#navbar-placeholder").load("{% url 'navbar' %}");
         });
     </script>
-     <script src="assets/js/navbar.js"></script>
-    <script src="assets/js/signup.js"></script>
+    <script src="{% static 'frontend/js/navbar.js' %}"></script>
+    <script src="{% static 'frontend/js/signup.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
