--- a/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
@@ -39,3 +39,14 @@
         </div>
     </div>
 </nav>
+<script>
+    $(function() {
+        updateCartCount();
+    });
+
+    function updateCartCount() {
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        const totalCount = cart.reduce((sum, item) => sum + item.quantity, 0);
+        $('#cart-count').text(totalCount);
+    }
+</script>
