--- a/carniceriaelcarvajal/frontend/templates/frontend/login.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/login.html
@@ -41,6 +41,7 @@
             </form>
             <!-- Enlace para registrarse si no se tiene cuenta -->
             No tienes una cuenta? <a href="{% url 'signup' %}">Regístrate</a>
+            <p>¿Olvidaste tu contraseña? <a href="{% url 'password_reset' %}">Recupérala aquí</a></p>
         </div>
     </div>
 
