--- a/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
@@ -17,7 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'productos' %}">Productos</a>
                 </li>
-              
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contacto' %}">Nosotros</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'sugerencias' %}">Contacto y Sugerencias</a>
                 </li>
