--- a/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
+++ b/carniceriaelcarvajal/frontend/templates/frontend/navbar.html
@@ -26,9 +26,18 @@
             </ul>
             <!-- Elementos de la derecha -->
             <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-user"></i> {{ user.username }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
+                </li>
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}"><i class="fas fa-user"></i> Iniciar sesión</a>
                 </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link position-relative" href="{% url 'carrito' %}">
                         <i class="fas fa-shopping-cart"></i> Carrito
